# ot-harjoitustyo

./: .gitignore  README.md  changelog  changelog.md  pyproject.toml  tasks.py
app/dokumentaatio/: tuntikirjanpito.md
dokumentaatio/: Tyoaikakirjanpito.md  Tyoaikakirjanpito.numbers  arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
game-app/: .coveragerc  .pylintrc  pyproject.toml  resultlist.db  tasks.py
game-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
game-app/src/: file_manager.py  game_services.py  index.py  move_player.py  results_service.py  tasks.py  ui.py
game-app/src/tests/: game_services_test.py  index_test.py  move_player_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md
src/: index.html  index.py
src/entities/: user.py
src/repositories/: user_repository.py
src/services/: app_service.py
src/tests/: ui_test.py
src/ui/: login_view.py  storage_view.py  ui.py
