[tool.poetry]
name = "game-app"
version = "0.1.0"
description = ""
authors = ["Sari <sarimarjaana@gmail.com>"]
readme = "README.md"
packages = [{include = "game_app"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
